force-app/main/default/objects/Territory__c/fields/Delivery_Cut_Off__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Cut_Off__c</fullName>
    <label>Delivery Cut Off</label>
    <type>DateTime</type>
</CustomField>