force-app/main/default/objects/Territory__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depot</label>
    <referenceTo>Depot__c</referenceTo>
    <relationshipLabel>Territories</relationshipLabel>
    <relationshipName>Territories</relationshipName>
    <type>Lookup</type>
</CustomField>