force-app/main/default/objects/Territory__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impact</label>
    <type>Checkbox</type>
</CustomField>