force-app/main/default/objects/Territory__c/fields/Is_Same_Day_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Is_Same_Day_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Same Day Delivery</label>
    <type>Checkbox</type>
</CustomField>