force-app/main/default/objects/Territory__c/fields/Same_Day_Delivery_Cut_Off__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Delivery_Cut_Off__c</fullName>
    <label>Same Day Delivery Cut Off</label>
    <type>DateTime</type>
</CustomField>