force-app/main/default/objects/Territory__c/fields/Same_Day_Delivery_End__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Delivery_End__c</fullName>
    <label>Same Day Delivery End</label>
    <type>DateTime</type>
</CustomField>