force-app/main/default/objects/Territory__c/fields/Same_Day_Delivery_Start__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Delivery_Start__c</fullName>
    <label>Same Day Delivery Start</label>
    <type>DateTime</type>
</CustomField>