force-app/main/default/objects/Territory__c/fields/Tracking_enabled__c.field-meta.xml
<CustomField>
    <fullName>Tracking_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracking enabled</label>
    <type>Checkbox</type>
</CustomField>